# deep-fluid-analyzer

./: .gitignore  FLUID_ANALYZER_README.md  README.md  break_analysis_results.csv  break_finder.py  copy_extract_to_data.py  example_usage.py  fluid_break_analyzer.py  main.py  masks_generator.py  predict.py  pyproject.toml  simple_opencv_viewer.py  test_setup.py  train.py  video_inference.py  video_inference_og.py  video_processing.py
best_model/: config.json  training_history.json
saved_videos/: video_complete.json  video_complete.npz  video_complete_nowy4.json  video_complete_nowy4.npz  video_complete_problematyczny1.json
src/: dataset.py  dataset_split.py  model.py  utils.py  video_inference.py
